# friedman-wand-proc-language

./: PROCLanguage.cabal  README.md
app/: Main.hs
src/: Eval.hs  Expr.hs  Parser.hs  Val.hs
test/: Spec.hs
