name:                PROCLanguage
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/groscoe/friedman-wand-proc-language#the-proc-language
license:             BSD3
license-file:        LICENSE
author:              Gustavo Roscoe
maintainer:          gustavo@gustavoroscoe.com
copyright:           2018 Gustavo Roscoe
category:            ProgrammingLanguages
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Repl
                     , Expr
                     , Parser
                     , Val
                     , Eval
  build-depends:       base >= 4.7 && < 5
                       , parsec
                       , mtl
                       , containers
  default-language:    Haskell2010

executable Language
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Language
  default-language:    Haskell2010

test-suite LETLanguage-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Language
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/groscoe/friedman-wand-proc-language
